# walletd

./: .env  CLAUDE.md  Cargo.toml  GHOSTBRIDGE_README.md  GQUIC.md  GQUIC_INTEGRATION.md  HOWTO-INTEGRATION.md  INTEGRATION_STATUS.md  README.md  ZQUIC_INTEGRATION_COMPLETE.md  build.rs  walletd.toml  walletd.toml.example  walletd_dev.db
.cargo/: config.toml
docs/: QUIC_INTEGRATION.md
include/: zcrypto_ffi.h  zsig_ffi.h  zwallet_ffi.h
migrations/: 001_initial.sql  002_multi_algorithm_support.sql
proto/: walletd.proto
src/: api.rs  auth.rs  cli.rs  config.rs  crypto.rs  error.rs  ffi.rs  grpc.rs  ledger.rs  main.rs  quic.rs  signer.rs  wallet.rs  zquic.rs
src/api/: balance.rs  endpoints.rs  mod.rs  multisig.rs  transactions.rs
src/quic/: auth.rs  client.rs  handler.rs  mod.rs  server.rs
tests/: multi_algorithm_test.rs
