[package]
name = "walletd"
version = "0.2.0"
edition = "2024"
description = "GhostChain Secure Wallet Daemon - Web5 wallet backend with ZID authentication"
authors = ["GhostKellz"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# QUIC transport (NEW)
gquic = { git = "https://github.com/ghostkellz/gquic", features = ["gcrypt-integration", "metrics"], optional = true }

# Enhanced crypto backend (NEW)
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", features = ["std", "rand_core", "ed25519", "secp256k1", "blake3"], optional = true }

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
tower = "0.4"

# Web server
axum = "0.7"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Cryptography (enhanced with gcrypt)
ed25519-dalek = "2.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
subtle = "2.5"

# Ethereum support (optional)
ethers = { version = "2.0", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
toml = "0.8"

# FFI for Zig integration
libc = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async traits
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["evm"]
evm = ["ethers"]
zig-ffi = []
# NEW: QUIC and enhanced crypto features
quic = ["gquic"]
enhanced-crypto = ["gcrypt"]
full-quic = ["quic", "enhanced-crypto"]

[[bin]]
name = "walletd"
path = "src/main.rs"
