[package]
name = "walletd"
version = "0.3.0"
edition = "2024"
description = "GhostChain Secure Wallet Daemon - Web5 wallet backend with ZID authentication"
authors = ["GhostKellz"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# PRIMARY: Zig-based QUIC transport (our main focus)
zquic-sys = { git = "https://github.com/ghostkellz/zquic", features = ["ffi", "crypto-integration"], optional = true }

# PRIMARY: Zig-based crypto backend (our main focus)
zcrypto-sys = { git = "https://github.com/ghostkellz/zcrypto", features = ["ffi"], optional = true }

# FALLBACK: Rust-based alternatives (keeping gcrypt for now)
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", features = ["ed25519", "secp256k1", "blake3"], optional = true }

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
tower = "0.4"

# Web server
axum = "0.7"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Cryptography (enhanced with gcrypt)
ed25519-dalek = "2.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
subtle = "2.5"

# Ethereum support (optional)
ethers = { version = "2.0", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
toml = "0.8"

# FFI for Zig integration
libc = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["evm"]
evm = ["ethers"]
zig-ffi = []
# PRIMARY: Zig-based transport and crypto (our main focus)
zquic = ["zquic-sys", "zcrypto-sys"]
zcrypto = ["zcrypto-sys"]
# FALLBACK: Rust-based alternatives
enhanced-crypto = ["gcrypt"]  
# COMBINED: All features for development/testing
full-integration = ["zquic", "zcrypto", "enhanced-crypto"]

[[bin]]
name = "walletd"
path = "src/main.rs"
